testsuite/tests/grammar/invalid_lexers/pattern_1.lkt
lexer foo_lexer {
    example <- p"["
}

grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
